# challenge-cli

./: .gitignore  LANGUAGE_SUPPORT_PLAN.md  README.md  pyproject.toml
challenge_cli/: __init__.py  analyzer.py  cli.py  config.py  history_manager.py  output.py  tester.py  utils.py  visualization.py
challenge_cli/analysis/: visualization.py
challenge_cli/cli/: app.py  cache.py  cache_management.py  completions.py  decorators.py  handlers.py  history.py  options.py
challenge_cli/core/: config.py  constants.py  data_utils.py  exceptions.py  formatting.py  logging.py
challenge_cli/history/: __init__.py  manager.py  snapshots.py  test_results.py
challenge_cli/output/: terminal.py
challenge_cli/plugins/: __init__.py  docker_runner.py  docker_utils.py  go_plugin.py  javascript_plugin.py  language_plugin.py  python_plugin.py  registry.py
challenge_cli/plugins/languages/: go_plugin.py  javascript_plugin.py  python_plugin.py
challenge_cli/plugins/languages/dockerfiles/: Dockerfile.go
challenge_cli/runners/: orchestrator.py  profile_runner.py  solutions.py  test_data.py  test_runner.py
leetcode_cli/: analyzer.py  cli.py  output.py  tester.py  utils.py
leetcode_cli/plugins/: __init__.py  docker_utils.py  go_plugin.py  javascript_plugin.py  language_plugin.py  python_plugin.py
leetcode_cli/plugins/dockerfiles/: Dockerfile.javascript  Dockerfile.python
tests/core/: test_data_utils.py  test_formatting.py
