[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "challenge_cli"
version = "0.1.0"
description = "A local coding challenge testing CLI"
authors = [{ name="jcsawyer123", email="joshua@jcsawyer.me" }]
dependencies = [
    "colorama",
    "psutil",
    "argcomplete"
]

[project.scripts]
challenge-cli = "challenge_cli.cli:main"