[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "challenge_cli"
version = "0.1.0"
description = "A local coding challenge testing CLI"
authors = [{ name="jcsawyer123", email="joshua@jcsawyer.me" }]
dependencies = [
    "colorama",
    "psutil",
    "typer[all]",
    "click==8.1.7",  # Pin Click to a compatible version!
]

[project.scripts]
challenge-cli = "challenge_cli.cli:app"